[workspace]
members = ["frenderer", "test2d"]
exclude = ["target", "content"]
resolver = "2"

[profile.dev.package.backtrace]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.adler]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.release]
debug=true