[package]
name = "frapp"
version = "0.1.2"
edition = "2021"
license="GPL-3.0-or-later"
description = "An app abstraction for simple uses of frenderer, the friendly WGPU renderer."
repository="https://github.com/JoeOsborn/frenderer"
authors = ["Joseph C. Osborn <joseph.osborn@pomona.edu>"]
documentation = "https://docs.rs/frapp"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frenderer = "0.9.13"
assets_manager = { version = "0.11", features = ["png", "hot-reloading", "embedded"] }
winit = "0.29"

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
features=["js"]
version="0.2.12"

[features]
default = []
webgl = ["frenderer/webgl"]
