[package]
name = "frenderer"
version = "0.8.0"
edition = "2021"
license="GPL-3.0-or-later"
description = "The friendly WGPU renderer."
repository="https://github.com/JoeOsborn/frenderer"
authors = ["Joseph C. Osborn <joseph.osborn@pomona.edu>"]
documentation = "https://docs.rs/frenderer"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version="1.13.1",features=["derive"]}
env_logger = "0.10"
log = "0.4"
wgpu = {git = "https://github.com/gfx-rs/wgpu"}
winit = "0.29"
ultraviolet = {version="0.9.2", features=["bytemuck","mint","serde"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
console_log = "1"
wasm-bindgen-futures = "0.4.34"
web-sys = {version="0.3.64", features = [
    "Location",
    "Blob",
    "RequestInit",
    "RequestMode",
    "Request",
    "Response",
    "WebGl2RenderingContext",
    "CanvasRenderingContext2d"
] }


[features]
default = []
webgl = ["wgpu/webgl"]
