[package]
name = "frenderer"
version = "0.9.13"
edition = "2021"
license="GPL-3.0-or-later"
description = "The friendly WGPU renderer."
repository="https://github.com/JoeOsborn/frenderer"
authors = ["Joseph C. Osborn <joseph.osborn@pomona.edu>"]
documentation = "https://docs.rs/frenderer"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version="1.13.1",features=["derive"]}
env_logger = "0.10"
log = "0.4"
wgpu = {version="0.19"}
winit = {version="0.29", optional=true}
ultraviolet = {version="0.9.2", features=["bytemuck","mint","serde"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1"
web-time = "1.0"

[features]
default = ["winit"]
winit = ["dep:winit"]
webgl = ["wgpu/webgl"]
