[package]
name = "helperer"
version = "0.8.0"
edition = "2021"
license="GPL-3.0-or-later"
description = "Some helpful utilities for building games with frenderer, the friendly WGPU renderer."
repository="https://github.com/JoeOsborn/frenderer"
authors = ["Joseph C. Osborn <joseph.osborn@pomona.edu>"]
documentation = "https://docs.rs/helperer"
readme = "README.md"

[dependencies]
frenderer = {path="../frenderer"}
winit = "0.29"
image = {version="0.24.7", features=["png"]}

