[package]
name = "engine-ecs-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frapp = {path="../../frapp"}
rand = "0.8.5"
ultraviolet = {version="0.9.2", features=["bytemuck", "serde"]}
hecs = {version="0.10.3"}

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
features=["js"]
version="0.2.12"

[features]
default = []
webgl = ["frapp/webgl"]
