[package]
name = "engine-ecs-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine-ecs = {path="../engine-ecs"}
winit = "0.29"
rand = "0.8"
image = {version="0.24.7", features=["png"]}
hecs = {version="0.10.3", features=["macros"]}

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
features=["js"]
version="0.2.12"

[features]
default = []
webgl = ["engine-ecs/webgl"]

