[package]
name = "engine-fancy-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine-fancy = {path="../engine-fancy"}
winit = "0.28"
rand = "0.8"

[features]
default = []
webgl = ["engine-fancy/webgl"]

