[package]
name = "engine-immediate-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine-immediate = {path="../engine-immediate"}
winit = "0.28"
rand = "0.8"
image = {version="0.24.7", features=["png"]}

[features]
default = []
webgl = ["engine-immediate/webgl"]

