[package]
name = "engine-immediate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frenderer = {path="../../frenderer"}
winit = "0.28"
image = {version="0.24", features=["png"]}
glam = {version="0.24", features=["bytemuck","rand","serde","debug-glam-assert","std"]}
bytemuck = {version="1.14", features=["derive","extern_crate_alloc"]}
bitflags = {version="2.4", features=["serde","bytemuck"]}
serde = {version="1.0", features=["derive"]}

[features]
default = []
webgl = ["frenderer/webgl"]

