[package]
name = "engine-simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frenderer = {path="../../frenderer"}
winit = "0.29"
image = {version="0.24", features=["png"]}
glam = {version="0.24", features=["bytemuck","rand","serde","debug-glam-assert","std"]}
bytemuck = {version="1.14", features=["derive","extern_crate_alloc"]}
bitflags = {version="2.4", features=["serde","bytemuck"]}
serde = {version="1.0", features=["derive"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures="0.4.40"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3"
[features]
default = []
webgl = ["frenderer/webgl"]

