[package]
name = "immediate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frenderer = {path="../../frenderer"}
async-trait = "0.1.73"
winit = "0.29"
rand = "0.8.5"
image = {version="0.24.7", features=["png"]}
assets_manager = { version = "0.11.2", features = ["png", "hot-reloading", "embedded", "zip", "zip-deflate"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
features=["js"]
version="0.2.12"

[features]
default = []
webgl = ["frenderer/webgl"]
