[package]
name = "test-gltf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frenderer = {path="../../frenderer"}
async-trait = "0.1.73"
winit = "0.29.4"
rand = "0.8.5"
# image = {version="0.24.7", features=["png"]}
assets_manager = { version="0.10", features=["png","gltf","embedded"] }
ultraviolet = {version="0.9.2", features=["bytemuck","serde"]}
tobj = "4.0"
image = {version="0.24.7", features=["png"]}
gltf = {version="1.1.0", features=["utils","import","names"]}

[features]
default = []
webgl = ["frenderer/webgl"]

